自动配置原理和配置文件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-server.port=8888
+server.port=8899
+
+car.type=big
+car.money=10000
+
+#打印自动配置报告
+#debug=true
+
+#spring启动的图标配置：不指定默认识别 classpath下的banner.jpg
+#spring.banner.image.location=classpath:banner.jpg
