--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>dmjdbc18</artifactId>
             <version>1.0.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
 
